# app/Http/Requests/CarPhoto/UpdateRequest.php
@@ -1,30 +1,0 @@
-<?php
-
-namespace App\Http\Requests\CarPhoto;
-
-use Illuminate\Foundation\Http\FormRequest;
-
-class UpdateRequest extends FormRequest
-{
-    /**
-     * Determine if the user is authorized to make this request.
-     */
-    public function authorize(): bool
-    {
-        return true;
-    }
-
-    /**
-     * Get the validation rules that apply to the request.
-     *
-     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
-     */
-    public function rules(): array
-    {
-        return [
-            'car_id' => 'required|exists:cars,id',
-            'image_url' => 'required|string|max:255',
-            'is_main' => 'boolean',
-        ];
-    }
-}
