# routes/api.php
@@ -18,4 +18,12 @@ Route::group(['middleware' => 'api', 'prefix' => 'auth'], function () {
 Route::resource('posts',PostController::class)->middleware('jwt.auth');
 Route::resource('cities',CityController::class)->middleware('jwt.auth');
 Route::resource('cars',CarController::class)->middleware('jwt.auth');
-Route::resource('car_photo',CarPhotoController::class)->middleware('jwt.auth');
+
+// Car Photo
+
+// Route::resource('car_photo',CarPhotoController::class)->middleware('jwt.auth');
+Route::post('/car_photo', [CarPhotoController::class, 'store'])->middleware('jwt.auth');
+Route::get('/car_photo', [CarPhotoController::class, 'index'])->middleware('jwt.auth');
+Route::get('/car_photo/{id}', [CarPhotoController::class, 'show'])->middleware('jwt.auth');
+Route::patch('/car_photo/{id}', [CarPhotoController::class, 'update'])->middleware('jwt.auth');
+Route::delete('/car_photo/{id}', [CarPhotoController::class, 'destroy'])->middleware('jwt.auth');
