# storage/api-docs/api-docs.json
@@ -782,80 +782,6 @@
                         "bearerAuth": []
                     }
                 ]
-            },
-            "post": {
-                "tags": [
-                    "Car_Photo"
-                ],
-                "summary": "Create Car Photo",
-                "operationId": "692bc4e83212537fe118b2ba6f632a72",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "allOf": [
-                                    {
-                                        "properties": {
-                                            "car_id": {
-                                                "type": "integer",
-                                                "example": 5
-                                            },
-                                            "image_url": {
-                                                "type": "string",
-                                                "example": "https://example.com/images/car1.jpg"
-                                            },
-                                            "is_main": {
-                                                "type": "boolean",
-                                                "example": true
-                                            }
-                                        },
-                                        "type": "object"
-                                    }
-                                ]
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "data": {
-                                            "properties": {
-                                                "id": {
-                                                    "type": "integer",
-                                                    "example": 1
-                                                },
-                                                "car_id": {
-                                                    "type": "integer",
-                                                    "example": 5
-                                                },
-                                                "image_url": {
-                                                    "type": "string",
-                                                    "example": "https://example.com/images/car1.jpg"
-                                                },
-                                                "is_main": {
-                                                    "type": "boolean",
-                                                    "example": true
-                                                }
-                                            },
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
             }
         },
         "/api/car_photo/{car_photo}": {
